--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">ShoeStore</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="email_field_label">Email</string>
+    <string name="password_field_label">Password</string>
+    <string name="login_button_label">Login</string>
+    <string name="sign_up_button_label">Sign up</string>
 </resources>
