--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -2,8 +2,15 @@
     <string name="app_name">ShoeStore</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- field label -->
     <string name="email_field_label">Email</string>
     <string name="password_field_label">Password</string>
+    <!-- button label -->
     <string name="login_button_label">Login</string>
     <string name="sign_up_button_label">Sign up</string>
+    <!-- navigation -->
+    <string name="navigate_to_instructions_button_label">Go to instructions</string>
+    <!-- welcome screen -->
+    <string name="welcome_title">Welcome</string>
+    <string name="welcome_body_content">The Android framework manages the lifecycles of UI controllers, such as activities and fragments. The framework may decide to destroy or re-create a UI controller in response to certain user actions or device events that are completely out of your control.</string>
 </resources>
