--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -19,5 +19,13 @@
     <string name="instructions_body_content">View the shoe list by clicking on %s</string>
 
     <!-- shoe list screen -->
-    <string name="add_shoe_button">Add shoe</string>
+    <string name="add_shoe_button_label">Add shoe</string>
+
+    <!-- shoe detail screen -->
+    <string name="shoe_name_label">Shoe name</string>
+    <string name="company_name_label">Brand</string>
+    <string name="shoe_size_label">Shoe size</string>
+    <string name="description_label">Shoe name</string>
+    <string name="save_shoe_detail_button_label">Save shoe</string>
+    <string name="cancel_shoe_detail_button_label">Cancel</string>
 </resources>
