--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="welcome_body_content">The Android framework manages the lifecycles of UI controllers, such as activities and fragments. The framework may decide to destroy or re-create a UI controller in response to certain user actions or device events that are completely out of your control.</string>
     <!-- instruction screen -->
     <string name="instruction_title">Instructions</string>
-    <string name="instructions_body_content">View the shoe list by clicking on %s</string>
+    <string name="instructions_body_content">View the shoe list by clicking on Go to shoe list</string>
 
     <!-- shoe list screen -->
     <string name="add_shoe_button_label">Add shoe</string>
